# dianyaapi-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
dianyaapi/: __init__.py  __init__.pyi
example/: .gitignore  main.py  pyproject.toml
src/: lib.rs  py_types.rs  transcribe_stream.rs  transcribe_wrapper.rs  types.rs
